--- a/2_Aprendizaje_Supervisado_.ipynb
+++ b/2_Aprendizaje_Supervisado_.ipynb
@@ -1,4 +1,23 @@
+{
+  "cells": [
     {
+      "cell_type": "markdown",
+      "source": [
+        "**DUDAS:**\n",
+        "\n",
+        "* 4.0 Armado del conjunto de entrenamiento y de prueba: no sé cómo utilizar **stratified sampling**\n",
+        "* 4.0/4.1 para vecinos cercanos utilizo Ap y QBO o puedo utilizar los clusters\n",
+        "* Cómo saber si el conjunto está overfitting o underfitting? intenté con el accuracy pero no me convencen los resultados al compararlos con la matriz de confusión.\n",
+        "https://www.aprendemachinelearning.com/sets-de-entrenamiento-test-validacion-cruzada/\n",
+        "Aquí dice q tengo q usar una métrica (usa accuracy) para ver si el modelo es el adecuado para mis datos. Si obtengo un valor cercano a 75%, el modelo ajusta bien con mis datos, si es mucho más o mucho menos, el modelo puede estar en overfitting o underfitting.\n",
+        "* Ver la parte de métricas al final de vecinos cercanos\n",
+        "Tengo desbalanseados los datos?"
+      ],
+      "metadata": {
+        "id": "mG1gUhT8ACb9"
+      }
+    },
+{
       "cell_type": "markdown",
       "source": [
         "Repito rápidamente lo realizado en la notebook anterior para tener los datos y clusters ya encontrados y poder utilizarlos en el aprendizaje supervisado.\n",
